--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".di.HiltApplication"
         android:allowBackup="true"
@@ -13,9 +14,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JwtAuth"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.MainActivity2"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
